refactor(services and controllers): decouple IApiResponse from services
Refactored all service methods to return objects or errors directly instead of manipulating IApiResponse. Controllers now handle IApiResponse construction if it is not complex, is prepared for data caching, and follows SOLID principles.